Added multiple sheets to file

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
             <div class="container mb-5">
                 <form action="api/parse" method="POST" enctype="multipart/form-data">
-                    <input type="file" name="file" required />
+                    <input type="file" name="file" required accept=".bprelease" />
                     <button class="btn btn-primary" type="submit">Enviar</button>
                 </form>
             </div>
